2025-09-07  Zhengyi Fu  <i@fuzy.me>

	Rename kimi-agent preset to coding-agent for better backend compatibility.

	* site-lisp/gptel-config.el (kimi-agent): Rename preset to coding-agent
	and update description to be backend-agnostic since it works with
	multiple backends beyond just kimi-k2.
	(gptel-agent): Update references to use the new coding-agent preset name.

2025-09-07  Zhengyi Fu  <i@fuzy.me>

	Fix complete_todo function to properly handle todo items with priorities.

	* site-lisp/gptel-config.el (+gptel-mark-todo-done): Update regex to
	match todo items with optional priorities and fix replace-match to only
	change TODO to DONE while preserving the rest of the line.

2025-09-07  Zhengyi Fu  <i@fuzy.me>

	Use project.el's project-name API for better project identification.

	* site-lisp/gptel-config.el (gptel-agent): Use project-name function
	instead of manually extracting directory name for better project
	identification and reduced naming conflicts.

2025-09-07  Zhengyi Fu  <i@fuzy.me>

	Add autoload for gptel-agent function.

	* site-lisp/gptel-config.el (gptel-agent): Add autoload cookie.
	* init.el: Add autoload form for gptel-agent.

2025-09-07  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (gptel-agent): Use project specific
	gptel-agent buffer name.

2025-09-07  Zhengyi Fu  <i@fuzy.me>

	Improve +gptel-edit-file-async function and update error message.

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Improve window
	selection logic for ediff, update error message for user rejection,
	add proper buffer cleanup.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	Add require 'flymake to editor_diagnostics function.

	* site-lisp/gptel-config.el (editor_diagnostics): Add require
	statement to ensure flymake is loaded before use.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	Add editor_diagnostics tool to gptel tools and kimi-agent preset.

	* site-lisp/gptel-config.el (editor_diagnostics): New tool to get
	diagnostics from editor.